--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,6 +19,7 @@
       </div>
       <button type="submit">Login</button>
     </form>
+    <p>Don't have an account? <a href="/register">Register here</a></p>
   </div>
 </body>
 </html>
